# qtcreator-doxygen

./: CMakeLists.txt  Doxygen.json  Doxygen.json.in  Doxygen.pluginspec  INSTALL  Jenkinsfile  README.md  doxygen.cpp  doxygen.h  doxygen.pro  doxygen.qrc  doxygen_global.h  doxygenconstants.h  doxygenfilesdialog.cpp  doxygenfilesdialog.h  doxygenfilesdialog.ui  doxygenplugin.cpp  doxygenplugin.h  doxygensettings.cpp  doxygensettings.h  doxygensettingsstruct.cpp  doxygensettingsstruct.h  doxygensettingswidget.cpp  doxygensettingswidget.h  doxygensettingswidget.ui  qtcreator-doxygen_dependencies.pri
.github/workflows/: build_qmake.yml
msvc/: build-all.bat  settings.bat
